--- a/AutomaticDrumTranscription.ipynb
+++ b/AutomaticDrumTranscription.ipynb
@@ -382,7 +382,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -647,15 +649,10 @@
     "means_Kick = mean(list_Kick)\n",
     "means_Snare = mean(list_Snare)\n",
     "means_Hihat = mean(list_Hihat)\n",
-    "\n",
-    "\n",
     "means_Kick_enst = mean(list_Kick_enst)\n",
     "means_Snare_enst = mean(list_Snare_enst)\n",
     "means_Hihat_enst = mean(list_Hihat_enst)\n",
     "\n",
-    "\n",
-    "\n",
-    "# create plot\n",
     "fig, ax = plt.subplots()\n",
     "index = np.arange(1)\n",
     "bar_width = 0.15\n",
@@ -664,20 +661,15 @@
     " \n",
     "rects1 = plt.bar(index, means_Kick, bar_width, alpha=opacity, color='b', label='Beatbox')\n",
     "rects2 = plt.bar(index + bar_width, means_Kick_enst, bar_width, alpha=opacity, color='g', label='Enst')\n",
-    "\n",
     "rects3 = plt.bar(index + space, means_Snare, bar_width, alpha=opacity, color='b')\n",
     "rects4 = plt.bar(index + space + bar_width, means_Snare_enst, bar_width, alpha=opacity, color='g')\n",
-    "\n",
     "rects5 = plt.bar(index + space + space, means_Hihat, bar_width, alpha=opacity, color='b')\n",
     "rects6 = plt.bar(index + space +  space + bar_width, means_Hihat_enst, bar_width, alpha=opacity, color='g')\n",
     "\n",
-    "\n",
     "plt.xlabel('Instruments')\n",
     "plt.ylabel('F-measure')\n",
-    "\n",
     "plt.legend()\n",
     "plt.title('F-measure score across different instruments')\n",
-    "\n",
     "plt.tight_layout()\n",
     "plt.rcParams[\"figure.figsize\"] = [10,5]\n",
     "plt.show()"
@@ -703,7 +695,6 @@
     "mean_beatbox = (means_Kick + means_Snare + means_Hihat)/3\n",
     "mean_enst = (means_Kick_enst + means_Snare_enst + means_Hihat_enst)/3\n",
     "\n",
-    "# create plot\n",
     "fig, ax = plt.subplots()\n",
     "index = np.arange(1)\n",
     "bar_width = 0.15\n",
@@ -712,12 +703,10 @@
     "rects1 = plt.bar(index, mean_beatbox, bar_width, alpha=opacity, color='b', label='BeatBox')\n",
     "rects2 = plt.bar(index + bar_width, mean_enst, bar_width, alpha=opacity, color='g', label='ENST')\n",
     "\n",
-    "\n",
     "plt.xlabel('Songs')\n",
     "plt.ylabel('F-measure')\n",
     "plt.legend()\n",
     "plt.title('F-measure score across datasets')\n",
-    "\n",
     "plt.tight_layout()\n",
     "plt.rcParams[\"figure.figsize\"] = [20,9]\n",
     "plt.show()"
